[gd_scene load_steps=4 format=3 uid="uid://bjsri43gjoagv"]

[ext_resource type="Script" uid="uid://50rpug01iipb" path="res://scene/option/software_upgrade.gd" id="1"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="3_n8jrn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_evxea"]

[node name="SoftwareUpgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(155, 208)
script = ExtResource("1")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -310.0
offset_top = 165.0
offset_right = 310.0
offset_bottom = 225.0
grow_horizontal = 2
pivot_offset = Vector2(529, 482)
theme = ExtResource("3_n8jrn")
theme_override_font_sizes/font_size = 60
text = "software_upgrade"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 319.0
offset_right = -50.0
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WiFiStatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_n8jrn")
theme_override_font_sizes/font_size = 32
text = "wifi_status_unknown"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("3_n8jrn")
theme_override_font_sizes/font_size = 32
text = "waiting_upgrade_command"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_n8jrn")
theme_override_font_sizes/font_size = 32
text = "1.0.1"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme = ExtResource("3_n8jrn")
step = 1.0

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_evxea")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="RetryButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme = ExtResource("3_n8jrn")
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("3_n8jrn")
theme_override_font_sizes/font_size = 32
text = "back_to_options"
